# Stopsearch-ETL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  instruction.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/stopsearch_etl/: __init__.py  __main__.py  api.py  backfill_service.py  cli.py  concurrent_etl.py  config.py  domain.py  etl_service.py  http_client.py  metrics.py  multi_force_runner.py  read_service.py  repository.py  scheduler.py  sqlite_repository.py
tests/: test_api_client_interface.py  test_availability_discovery.py  test_backfill_service.py  test_cli.py  test_code_quality.py  test_concurrent_etl.py  test_config.py  test_docker_compose.py  test_dockerfile.py  test_error_edge_cases.py  test_etl_service.py  test_http_client.py  test_idempotency.py  test_metrics_logging.py  test_multi_force_runner.py  test_package_structure.py  test_read_service.py  test_repository_interface.py  test_retry_policy.py  test_scheduler.py  test_smoke.py  test_sqlite_repository.py  test_stop_search_record.py
